Closed
Bug 1896680
Opened 1 year ago
Closed 1 year ago
Perma [tier 2] /builds/worker/checkouts/gecko/widget/gtk/nsDragService.cpp:553:15: error: no type named 'once_flag' in namespace 'std'
Categories
(Firefox Build System :: General, defect, P5)
Firefox Build System
General
Tracking
(firefox-esr115 unaffected, firefox126 unaffected, firefox127 unaffected, firefox128 fixed)
RESOLVED
FIXED
128 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox126 | --- | unaffected |
| firefox127 | --- | unaffected |
| firefox128 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: stransky)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=458103678&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/G9BJANPqSuWwrLxYoHRnwA/runs/0/artifacts/public/logs/live_backing.log
[task 2024-05-14T15:15:31.482Z] 15:15:31 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/security/nss/cmd/certutil/certutil_certutil'
[task 2024-05-14T15:15:31.483Z] 15:15:31 INFO - security/nss/cmd/certutil/certutil.o
[task 2024-05-14T15:15:31.484Z] 15:15:31 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/security/nss/cmd/certutil/certutil_certutil'
[task 2024-05-14T15:15:31.528Z] 15:15:31 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/widget/gtk'
[task 2024-05-14T15:15:31.533Z] 15:15:31 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o Unified_cpp_widget_gtk2.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DNDEBUG=1 -DTRIMMED=1 -DCAIRO_GFX '-DMOZ_APP_NAME="firefox"' -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/widget/gtk -I/builds/worker/workspace/obj-build/widget/gtk -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/other-licenses/atk-1.0 -I/builds/worker/checkouts/gecko/third_party/cups/include -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/widget/headless -I/builds/worker/checkouts/gecko/widget/x11 -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -pthread -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -Werror=switch -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_widget_gtk2.o.pp Unified_cpp_widget_gtk2.cpp
[task 2024-05-14T15:15:31.533Z] 15:15:31 INFO - In file included from Unified_cpp_widget_gtk2.cpp:29:
[task 2024-05-14T15:15:31.534Z] 15:15:31 ERROR - /builds/worker/checkouts/gecko/widget/gtk/nsDragService.cpp:553:15: error: no type named 'once_flag' in namespace 'std'
[task 2024-05-14T15:15:31.535Z] 15:15:31 INFO - 553 | static std::once_flag onceFlag;
[task 2024-05-14T15:15:31.535Z] 15:15:31 INFO - | ~~~~~^
[task 2024-05-14T15:15:31.535Z] 15:15:31 ERROR - /builds/worker/checkouts/gecko/widget/gtk/nsDragService.cpp:554:8: error: no member named 'call_once' in namespace 'std'; did you mean 'calloc'?
[task 2024-05-14T15:15:31.536Z] 15:15:31 INFO - 554 | std::call_once(onceFlag, [] {
[task 2024-05-14T15:15:31.536Z] 15:15:31 INFO - | ~~~~~^~~~~~~~~
[task 2024-05-14T15:15:31.537Z] 15:15:31 INFO - | calloc
[task 2024-05-14T15:15:31.537Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/gcc/x86_64-linux-gnu/8/../../../../include/c++/8/cstdlib:144:11: note: 'calloc' declared here
[task 2024-05-14T15:15:31.537Z] 15:15:31 INFO - 144 | using ::calloc;
[task 2024-05-14T15:15:31.537Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.538Z] 15:15:31 INFO - In file included from Unified_cpp_widget_gtk2.cpp:38:
[task 2024-05-14T15:15:31.538Z] 15:15:31 WARNING - /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp:140:24: warning: 'gtk_misc_get_type' is deprecated [-Wdeprecated-declarations]
[task 2024-05-14T15:15:31.539Z] 15:15:31 INFO - 140 | gtk_misc_set_padding(GTK_MISC(preview_widget), x_padding, 0);
[task 2024-05-14T15:15:31.539Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.540Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkmisc.h:39:67: note: expanded from macro 'GTK_MISC'
[task 2024-05-14T15:15:31.540Z] 15:15:31 INFO - 39 | #define GTK_MISC(obj) (G_TYPE_CHECK_INSTANCE_CAST ((obj), GTK_TYPE_MISC, GtkMisc))
[task 2024-05-14T15:15:31.540Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.541Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkmisc.h:38:32: note: expanded from macro 'GTK_TYPE_MISC'
[task 2024-05-14T15:15:31.541Z] 15:15:31 INFO - 38 | #define GTK_TYPE_MISC (gtk_misc_get_type ())
[task 2024-05-14T15:15:31.541Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.542Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkmisc.h:69:1: note: 'gtk_misc_get_type' has been explicitly marked deprecated here
[task 2024-05-14T15:15:31.542Z] 15:15:31 INFO - 69 | GDK_DEPRECATED_IN_3_14
[task 2024-05-14T15:15:31.542Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.542Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gdk/gdkversionmacros.h:306:47: note: expanded from macro 'GDK_DEPRECATED_IN_3_14'
[task 2024-05-14T15:15:31.543Z] 15:15:31 INFO - 306 | # define GDK_DEPRECATED_IN_3_14 GDK_DEPRECATED
[task 2024-05-14T15:15:31.543Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.543Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gdk/gdkversionmacros.h:48:24: note: expanded from macro 'GDK_DEPRECATED'
[task 2024-05-14T15:15:31.543Z] 15:15:31 INFO - 48 | #define GDK_DEPRECATED G_DEPRECATED _GDK_EXTERN
[task 2024-05-14T15:15:31.543Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.544Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0/glib/gmacros.h:323:37: note: expanded from macro 'G_DEPRECATED'
[task 2024-05-14T15:15:31.544Z] 15:15:31 INFO - 323 | #define G_DEPRECATED __attribute__((__deprecated__))
[task 2024-05-14T15:15:31.544Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.544Z] 15:15:31 INFO - In file included from Unified_cpp_widget_gtk2.cpp:38:
[task 2024-05-14T15:15:31.546Z] 15:15:31 WARNING - /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp:140:3: warning: 'gtk_misc_set_padding' is deprecated [-Wdeprecated-declarations]
[task 2024-05-14T15:15:31.547Z] 15:15:31 INFO - 140 | gtk_misc_set_padding(GTK_MISC(preview_widget), x_padding, 0);
[task 2024-05-14T15:15:31.548Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.548Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkmisc.h:79:1: note: 'gtk_misc_set_padding' has been explicitly marked deprecated here
[task 2024-05-14T15:15:31.549Z] 15:15:31 INFO - 79 | GDK_DEPRECATED_IN_3_14
[task 2024-05-14T15:15:31.550Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.553Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gdk/gdkversionmacros.h:306:47: note: expanded from macro 'GDK_DEPRECATED_IN_3_14'
[task 2024-05-14T15:15:31.554Z] 15:15:31 INFO - 306 | # define GDK_DEPRECATED_IN_3_14 GDK_DEPRECATED
[task 2024-05-14T15:15:31.555Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.556Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gdk/gdkversionmacros.h:48:24: note: expanded from macro 'GDK_DEPRECATED'
[task 2024-05-14T15:15:31.557Z] 15:15:31 INFO - 48 | #define GDK_DEPRECATED G_DEPRECATED _GDK_EXTERN
[task 2024-05-14T15:15:31.558Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.558Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0/glib/gmacros.h:323:37: note: expanded from macro 'G_DEPRECATED'
[task 2024-05-14T15:15:31.559Z] 15:15:31 INFO - 323 | #define G_DEPRECATED __attribute__((__deprecated__))
[task 2024-05-14T15:15:31.560Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.561Z] 15:15:31 INFO - In file included from Unified_cpp_widget_gtk2.cpp:38:
[task 2024-05-14T15:15:31.562Z] 15:15:31 WARNING - /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp:728:63: warning: 'GtkStock' is deprecated [-Wdeprecated-declarations]
[task 2024-05-14T15:15:31.562Z] 15:15:31 INFO - 728 | accept_label = (action == GTK_FILE_CHOOSER_ACTION_SAVE) ? GTK_STOCK_SAVE
[task 2024-05-14T15:15:31.563Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.564Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkstock.h:964:38: note: expanded from macro 'GTK_STOCK_SAVE'
[task 2024-05-14T15:15:31.565Z] 15:15:31 INFO - 964 | #define GTK_STOCK_SAVE ((GtkStock)"gtk-save")
[task 2024-05-14T15:15:31.566Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.566Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkstock.h:105:1: note: 'GtkStock' has been explicitly marked deprecated here
[task 2024-05-14T15:15:31.567Z] 15:15:31 INFO - 105 | G_DEPRECATED
[task 2024-05-14T15:15:31.569Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.569Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0/glib/gmacros.h:323:37: note: expanded from macro 'G_DEPRECATED'
[task 2024-05-14T15:15:31.569Z] 15:15:31 INFO - 323 | #define G_DEPRECATED __attribute__((__deprecated__))
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - In file included from Unified_cpp_widget_gtk2.cpp:38:
[task 2024-05-14T15:15:31.570Z] 15:15:31 WARNING - /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp:729:63: warning: 'GtkStock' is deprecated [-Wdeprecated-declarations]
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - 729 | : GTK_STOCK_OPEN;
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkstock.h:765:38: note: expanded from macro 'GTK_STOCK_OPEN'
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - 765 | #define GTK_STOCK_OPEN ((GtkStock)"gtk-open")
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkstock.h:105:1: note: 'GtkStock' has been explicitly marked deprecated here
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - 105 | G_DEPRECATED
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0/glib/gmacros.h:323:37: note: expanded from macro 'G_DEPRECATED'
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - 323 | #define G_DEPRECATED __attribute__((__deprecated__))
[task 2024-05-14T15:15:31.570Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - In file included from Unified_cpp_widget_gtk2.cpp:38:
[task 2024-05-14T15:15:31.571Z] 15:15:31 WARNING - /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp:732:30: warning: 'GtkStock' is deprecated [-Wdeprecated-declarations]
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - 732 | title, parent, action, GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL,
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkstock.h:159:38: note: expanded from macro 'GTK_STOCK_CANCEL'
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - 159 | #define GTK_STOCK_CANCEL ((GtkStock)"gtk-cancel")
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/deprecated/gtkstock.h:105:1: note: 'GtkStock' has been explicitly marked deprecated here
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - 105 | G_DEPRECATED
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0/glib/gmacros.h:323:37: note: expanded from macro 'G_DEPRECATED'
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - 323 | #define G_DEPRECATED __attribute__((__deprecated__))
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - In file included from Unified_cpp_widget_gtk2.cpp:38:
[task 2024-05-14T15:15:31.571Z] 15:15:31 WARNING - /builds/worker/checkouts/gecko/widget/gtk/nsFilePicker.cpp:734:3: warning: 'gtk_dialog_set_alternative_button_order' is deprecated [-Wdeprecated-declarations]
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - 734 | gtk_dialog_set_alternative_button_order(
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - | ^
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/gtk/gtkdialog.h:186:1: note: 'gtk_dialog_set_alternative_button_order' has been explicitly marked deprecated here
[task 2024-05-14T15:15:31.571Z] 15:15:31 INFO - 186 | GDK_DEPRECATED_IN_3_10
Updated•1 year ago
|
Summary: Perma /builds/worker/checkouts/gecko/widget/gtk/nsDragService.cpp:553:15: error: no type named 'once_flag' in namespace 'std' → Perma [tier 2] /builds/worker/checkouts/gecko/widget/gtk/nsDragService.cpp:553:15: error: no type named 'once_flag' in namespace 'std'
Comment 1•1 year ago
|
||
:stransky, since you are the author of the regressor, bug 1881229, could you take a look?
For more information, please visit BugBot documentation.
Flags: needinfo?(stransky)
Comment 2•1 year ago
|
||
I see the same problem on Solaris.
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 4•1 year ago
|
||
Updated•1 year ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
| Assignee | ||
Updated•1 year ago
|
Flags: needinfo?(stransky)
| Comment hidden (Intermittent Failures Robot) |
Comment 6•1 year ago
|
||
Ok, the patch resolved the issue. Thank you!
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/87127891d240
[Linux] Add mutex headers for std::once_flag r=emilio
Comment 8•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox128:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
Updated•1 year ago
|
status-firefox126:
--- → unaffected
status-firefox127:
--- → unaffected
status-firefox-esr115:
--- → unaffected
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•