Bug 1896680 [Linux] Add mutex headers for std::once_flag r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D210622